--- a/query-overview.mdx
+++ b/query-overview.mdx
@@ -16,7 +16,6 @@ The first use case is accomplished through **online queries**, which try to
 return values for a single feature class as quickly as possible, taking
 advantage of caching and distributed execution.
 
-
 The latter use cases are accomplished through **offline queries** which use 
 the offline store and can return multiple instances of a feature class
 for multiple primary keys or timepoints.
@@ -65,6 +64,21 @@ client.offline_query(
   # max_samples = 10,                   # max of 10 samples
   # lower_bound=datetime(2024, 10, 12), # sample computed after 10.12.2024
   # upper_bound=datetime(2024, 10, 20), # sample computed before 10.20.2024
+)
+```
+
+### Running queries using gRPC
+
+If you have a gRPC query server active in your environment, you can also run queries using the
+[gRPC client](/api-docs#ChalkGRPCClient):
+
+```python
+from chalk.client.client_grpc import ChalkGRPCClient
+
+grpc_client = ChalkGRPCClient()
+grpc_client.query(
+  input={'user.id': 1},
+  output=['user.name']
 )
 ```
 
