--- a/resolver-online-offline.mdx
+++ b/resolver-online-offline.mdx
@@ -10,7 +10,7 @@ all the features that you've computed—enabling monitoring and dataset generati
 
 ## Storage
 
-Your online environment stores data that you want to cache
+Your online store holds data that you want to cache
 according to the cache policies you set on [your features](/docs/feature-caching) or
 on [your queries](/docs/query-caching). While this is usually a small amount of data,
 you want exceptionally fast reads.
@@ -18,7 +18,7 @@ This kind of access pattern aligns
 with the performance characteristics of [Redis](https://redis.com) or [Dynamo DB](https://aws.amazon.com/dynamodb/)
 which Chalk uses to store your online data.
 
-The offline environment stores far more data than the online environment.
+The offline store holds far more data than the online store.
 It keeps a record of [all online runs](#online-to-offline)
 and indexes all data brought in from your offline data sources.
 Chalk integrates with a number of different data warehouse systems for our large-scale
@@ -79,14 +79,14 @@ For more information, see [temporal consistency](/docs/temporal-consistency).
 
 ### Offline-to-online
 
-In contrast, data from the offline environment _does not_
+In contrast, data from the offline store _does not_
 reach the online store by default.
 However, you can choose to ETL the data from an offline
 resolver into the online store.
 This can be helpful, for example,
 when you tolerate stale data in online inference and
-have a data source in the offline environment that doesn't
-have a direct replacement in the online environment.
+have a data source in the offline store that doesn't
+have a direct replacement in the online store.
 More details are provided in the section [Reverse ETL](/docs/reverse-etl).
 
 ## Summary
