--- a/configuration.mdx
+++ b/configuration.mdx
@@ -19,9 +19,7 @@ Your Chalk project's configuration is shared across the following files:
 1. `chalk.yaml` (or `chalk.yml`): Configuration for your project's deployment
 1. `.chalkignore`: Files to exclude from your project's deployment
 1. A requirements file: Default Python requirements for Chalk to install via `pip` (can be overridden in `chalk.yaml`).
-This can either be
-    1. `requirements.txt` or
-    1. `pyproject.toml`
+This can either be `requirements.txt` or `pyproject.toml`.
 
 Here's our recommended repository structure:
 
