--- a/resource-configuration.mdx
+++ b/resource-configuration.mdx
@@ -40,8 +40,8 @@ for GCP deployments.
 The `Auto Shutdown Period` dropdown enables you to select the amount of time of inactivity after which you'd like the
 branch server to spin down.
 
-In addition, you can set Environment dyVariable Overrides. If you have any questions about how to best configure
-your environment for your use case, reach out to the Chalk team.
+In addition, you can set Environment Variable Overrides for the resource group. If you have any questions about how
+to best configure your environment for your use case, reach out to the Chalk team.
 
 ### Kubernetes
 
@@ -58,3 +58,9 @@ resources, such as your online and offline stores, and the branch server.
 
 Under `Settings > User Permissions`, you can view the roles associated with each user, as well as whether those
 roles are granted directly or via SCIM.
+
+### Environment Variables
+
+Under `Settings > Environment > Variables`, you can view and edit global environment variables for
+your environment. Please reach out to the Chalk team if you have any questions about which environment variables
+to set for your use case.
