--- a/underscore.mdx
+++ b/underscore.mdx
@@ -166,6 +166,7 @@ combination with underscore references to transform features:
 * [`regexp_extract`](/api-docs#regexp_extract)
 * [`regexp_extract_all`](/api-docs#regexp_extract_all)
 * [`regexp_like`](/api-docs#regexp_like)
+* [`regexp_replace`](/api-docs#regexp_replace)
 * [`replace`](/api-docs#replace)
 * [`reverse`](/api-docs#reverse)
 * [`split_part`](/api-docs#split_part)
@@ -179,6 +180,7 @@ combination with underscore references to transform features:
 
 * [`bytes_to_string`](/api-docs#bytes_to_string)
 * [`gunzip`](/api-docs#gunzip)
+* [`json_extract_array`](/api-docs#json_extract_array)
 * [`json_value`](/api-docs#json_value)
 * [`md5`](/api-docs#md5)
 * [`sha1`](/api-docs#sha1)
@@ -201,6 +203,7 @@ combination with underscore references to transform features:
 * [`mod`](/api-docs#mod)
 * [`power`](/api-docs#power)
 * [`round`](/api-docs#round)
+* [`safe_divide`](/api-docs#safe_divide)
 * [`sigmoid`](/api-docs#sigmoid)
 * [`sin`](/api-docs#sin)
 * [`sqrt`](/api-docs#sqrt)
@@ -211,8 +214,11 @@ combination with underscore references to transform features:
 * [`day_of_week`](/api-docs#day_of_week)
 * [`day_of_year`](/api-docs#day_of_year)
 * [`format_datetime`](/api-docs#format_datetime)
+* [`from_unix_milliseconds`](/api-docs#from_unix_milliseconds)
+* [`from_unix_seconds`](/api-docs#from_unix_seconds)
 * [`hour_of_day`](/api-docs#hour_of_day)
 * [`month_of_year`](/api-docs#month_of_year)
+* [`to_iso8601`](/api-docs#to_iso8601)
 * [`total_seconds`](/api-docs#total_seconds)
 * [`unix_milliseconds`](/api-docs#unix_milliseconds)
 * [`unix_seconds`](/api-docs#unix_seconds)
