--- a/bigquery-export.mdx
+++ b/bigquery-export.mdx
@@ -1,6 +1,6 @@
 ---
-title: Bigquery Export
-description: Configuration for feature export to Bigquery
+title: BigQuery Export
+description: Configuration for feature export to BigQuery
 ---
 
 
