fix abbreviation punctuation

--- a/env-vars.mdx
+++ b/env-vars.mdx
@@ -46,5 +46,5 @@ can use in your resolvers.
 | `CHALK_DEPLOYMENT_ID`      | The ID of the deployment                                                                              |
 | `CHALK_TEAM_ID`            | The ID of the team                                                                                    |
 | `CHALK_PROJECT_ID`         | The ID of the project                                                                                 |
-| `CHALK_ACTIVE_ENVIRONMENT` | The id of the active environment (eg. `"9d0oj902"`)                                                   |
-| `CHALK_ENVIRONMENT_NAME`   | The name of the active environment (eg. `"prod"`)                                                     |
+| `CHALK_ACTIVE_ENVIRONMENT` | The id of the active environment (e.g. `"9d0oj902"`)                                                   |
+| `CHALK_ENVIRONMENT_NAME`   | The name of the active environment (e.g. `"prod"`)                                                     |
