--- a/fraud-2.mdx
+++ b/fraud-2.mdx
@@ -72,7 +72,7 @@ class User:
 In our features below, we've added some comments and
 annotations to our features. These are optional, but
 can be useful for documentation and for setting alerting
-policies. For example, you may wish to send [Pagerduty alerts](/docs/pagerduty)
+policies. For example, you may wish to send [PagerDuty alerts](/docs/pagerduty)
 to [different teams](/docs/alertconfig) based on
 the owner of the related feature.
 
