--- a/fraud-3.mdx
+++ b/fraud-3.mdx
@@ -221,7 +221,7 @@ class Account:
 +   updated_at: FeatureTime
 ```
 
-Features with overriden observation timestamps are inserted into
+Features with overridden observation timestamps are inserted into
 the offline store with the timestamp that you
 specify. The observation timestamp works like an "effective as of" timestamp.
 When you sample historical data, you can specify the observation timestamp
