--- a/metrics-installation.mdx
+++ b/metrics-installation.mdx
@@ -9,7 +9,7 @@ import {
 } from '@/components/AttributeTable'
 
 ---
-Chalk uses a database hosted in the ("Customer Cloud") kubernetes cluster
+Chalk uses a database hosted in the ("Customer Cloud") Kubernetes cluster
 to store metrics data. This database is part of the environment dataplane,
 and stores information and metrics about queries run in a Chalk environment.
 
