--- a/observability.mdx
+++ b/observability.mdx
@@ -28,7 +28,7 @@ Resolvers support many workflows and common orchestration patterns:
   Export Chalk logs to other monitoring systems.
 - **[Datadog Integration](/docs/datadog)** -
   Ingest Chalk metrics into Datadog.
-- **[Pagerduty](/docs/pagerduty)** -
-  Integrate Pagerduty alerts into you feature pipelines.
+- **[PagerDuty](/docs/pagerduty)** -
+  Integrate PagerDuty alerts into you feature pipelines.
 - **[Slack](/docs/slack)** -
   Consume Chalk alerts in your Slack channels.
