fix spelling error

--- a/on-prem-gcp.mdx
+++ b/on-prem-gcp.mdx
@@ -39,7 +39,7 @@ resources that must be provisioned.
 - **Google Secret Manager**: Chalk requires access to [Google Secret Manager](https://cloud.google.com/secret-manager) to store user-provided datasource credentials that are used by the Chalk Compute Cluster to communicate with your underlying datasources.
 - **Google Pubsub**: Chalk uses [Google Pubsub](https://cloud.google.com/pubsub) in order to persist data from the compute server to online and offline storage.
 - **Google Cloud Scheduler**: Chalk uses [Google Cloud Scheduler](https://cloud.google.com/scheduler) in order to coordinate offline feature derivation jobs.
-- **Google Cloud Build**: Chalk uses [Google Gloud Build](https://cloud.google.com/build) in order to construct Docker images containing your feature engineering pipelines.
+- **Google Cloud Build**: Chalk uses [Google Cloud Build](https://cloud.google.com/build) in order to construct Docker images containing your feature engineering pipelines.
 - **Google Cloud Storage**: Chalk uses [Google Cloud Storage](https://cloud.google.com/storage) to store computed datasets and for bulk upload jobs into the BigQuery offline store.
 
 ## Kubernetes Resources
