--- a/query-basics.mdx
+++ b/query-basics.mdx
@@ -59,7 +59,7 @@ Read more about the parameters to this method [here](/api-docs#ChalkClient.query
   Input features and values are provided at the time of request.
   For example, primary key-value pairs often designate the subset of data returned. Feature inputs
   are provided by fully qualified path.  <a href={'/docs/has-many'}>Has many features</a>
-  are input as lists, and <a href={'/docs/feature-types#dataclass'}>struct features</a> are input as Json.
+  are input as lists, and <a href={'/docs/feature-types#dataclass'}>struct features</a> are input as JSON.
 
   An example of passing a user with two credit cards as input:
   ```{user.id: '1', user.cards: [card.id: 'xyz', card.id:'abc']}```
