--- a/metrics-installation.mdx
+++ b/metrics-installation.mdx
@@ -64,13 +64,13 @@ The following is an example configuration for a metrics database:
 ## Database Routing Between Clusters
 In order for Chalk to properly function, all metrics databases must be routable from the Chalk Metadata Server.
 For metrics servers in the same cluster as the metadata server this is trivial, as all the kubernetes services are
-easily accessed, and no special considerations are needed. For a metrics database in a different cluster, the service-type
+easily accessed, and no special considerations are needed. For a metrics database in a different cluster, the `service-type`
 must be set to `load-balancer` in order to get a dns name that will route into the cluster. Routing can then be done in one
 two ways:
 1. Set `internal` to `false`, so that the clusters can route together over the open internet. For this to work, you
    must have public subnets attached to your VPC and an internet gateway et.
 2. Set up VPC peering to allow the clusters to route to one another, while still keeping the traffic internal.
-Note that if the clusters are in the same VPC, simply setting the service type to `load-balancer` will be sufficient.
+Note that if the clusters are in the same VPC, simply setting the `service-type` to `load-balancer` will be sufficient.
 
 ## Configuration Options
 <AttributeTable>
