--- a/metrics-installation.mdx
+++ b/metrics-installation.mdx
@@ -124,7 +124,7 @@ The IAM role to use for backups to access the S3 bucket.
 The name of the AWS secret to store the database URI in.
 </Attribute>
 <Attribute field={'internal'} kind={'bool'}>
-    Whether the connection pool load balancer attaches to interal or external subnets. Not usede if the service type is "cluster-ip".
+    Whether the connection pool load balancer attaches to interal or external subnets. Not used if the service type is "cluster-ip".
 </Attribute>
 </AttributeTable>
 
