docs patch: bunch of v tiny typos (#275)
* capitalize Kubernetes and others

* capitalize BigQuery

* fix abbreviation punctuation

* capitalize Kubernetes

* capitalize PagerDuty

* fix misspelling

* capitalize Kubernetes

* capitalize PagerDuty

* fix spelling error

* capitalize JSON

* use verb form of sign up instead of noun form signup

* fix spelling error

* replace noun 'login' with verb 'log in'

--- a/setup-guide.mdx
+++ b/setup-guide.mdx
@@ -39,8 +39,8 @@ $ source .venv/bin/activate
 ```
 You can run `source .venv/bin/activate` to activate the virtual environment, and `deactivate` to deactivate.
 
-5. Login by typing [`chalk login`](/cli/login). If you're using a dedicated environment, make sure you use the
-[`--api-host`](/cli/chalk#api-host) flag. Type `y` when prompted and login in the browser.
+5. Log in by typing [`chalk login`](/cli/login). If you're using a dedicated environment, make sure you use the
+[`--api-host`](/cli/chalk#api-host) flag. Type `y` when prompted and log in through the browser.
 
 6. Run [`chalk init`](/cli/init) to initialize your project files. This will initialize a directory structure with an
 empty `src` directory and three files: `chalk.yaml`, `README.md`, and `requirements.txt`.
@@ -86,7 +86,7 @@ which we will build in the next step.
 Having set up a basic project directory, next we'll want to configure the data sources from which we will load data to
 compute our features. We can do so in the Chalk dashboard.
 
-1. In the same directory from before, login or signup with Chalk directly from the command line. The
+1. In the same directory from before, log in or sign up with Chalk directly from the command line. The
 [`chalk login`](/cli/login) command will open your browser and create an
 API token for your local development, as well as redirect you to your dashboard. If you are not
 redirected you can also find the dashboard at [https://chalk.ai/projects](https://chalk.ai/projects)
