fix typo, add image

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -26,10 +26,14 @@ any questions about any of these metrics
 ![Overview page in dashboard](/img/overview-page-dec-2024.png)
 
 In addition, you can now view the latest stack trace for a pod in your cluster under `Settings > Kubernetes`, which can
-be helpful for debugging offline queries or scheduled runs. Cusotmers with a gRPC engine can also use the new
-`Values Preview` tab on the Features page to view recently observed feature values as loaded from the offline store.
+be helpful for debugging offline queries or scheduled runs.
 
 ![Stack trace for pods in the cluster](/img/stack-trace-dec-2024.png)
+
+Customers with a gRPC engine can also use the new `Values Preview` tab on the Features page to view recently observed
+feature values as loaded from the offline store.
+
+![Values preview for features in dashboard](/img/values-preview-dec-2024.png)
 
 ### Postgres Native SQL driver improvements
 
