remove duplicate word

--- a/reverse-etl.mdx
+++ b/reverse-etl.mdx
@@ -13,7 +13,7 @@ our data warehouse is the offline data store
 and our operational system is the online data store
 ([Redis](https://redis.com), [Cloud Memorystore](https://cloud.google.com/memorystore), or [DynamoDB](https://aws.amazon.com/dynamodb/)).
 The online data store is queried by
-one our our [API clients](/docs/query-basics),
+one our [API clients](/docs/query-basics),
 while the offline data store queried by
 our [bulk API](/docs/query-offline).
 
