remove duplicate word

--- a/query-offline.mdx
+++ b/query-offline.mdx
@@ -73,7 +73,7 @@ input={
 
 ### Input times
 
-Timestamps can be be passed in the [input_times](/api-docs#ChalkClient.offline_query.input_times) argument.
+Timestamps can be passed in the [input_times](/api-docs#ChalkClient.offline_query.input_times) argument.
 If none are provided, Chalk will use the current time.
 
 ```py
