fix spelling typos

--- a/branches.mdx
+++ b/branches.mdx
@@ -58,7 +58,7 @@ def new_resolver(name: NewFeatures.name) -> NewFeatures.greeting:
 
 As you adjust features and resolvers, you can iteratively see how your changes affect the your feature values with the [`Dataset.recompute`](/api-docs#Dataset.recompute) method. Just pass any features you want to be re-computed as arguments to the `features` parameter, and Chalk will generate a new Dataset revision using the latest definitions of features and resolvers.
 
-When used in conjunction with the ability to adjust your features and resolvers in the notebook, this tool allows developers and data scientists to rapidly experiement and productionize their work.
+When used in conjunction with the ability to adjust your features and resolvers in the notebook, this tool allows developers and data scientists to rapidly experiment and productionize their work.
 
 ---
 
