--- a/notebook-development.mdx
+++ b/notebook-development.mdx
@@ -128,7 +128,7 @@ FROM authorizations
 Chalk lines up the names of your target SQL columns with the names of your features.
 In this case, we have an `Authorization` feature class that contains a features called `authorized_at`.
 However, our Snowflake table has a column called `created_at` that we want to use to populate the `authorized_at` feature.
-So, we use the `as` keyword to rename the column in our resolver.
+We therefore use the `as` keyword to rename the column in our resolver.
 
 ## Inline Syntax
 
