--- a/reverse-etl.mdx
+++ b/reverse-etl.mdx
@@ -12,7 +12,7 @@ our data warehouse is the offline data store
 ([Timescale](https://timescale.com) or [BigQuery](https://cloud.google.com/bigquery/docs/))
 and our operational system is the online data store
 ([Redis](https://redis.com), [Cloud Memorystore](https://cloud.google.com/memorystore), or [DynamoDB](https://aws.amazon.com/dynamodb/)).
-The online data store is queried by
+Chalk's API client can be used to query the [online data store](/docs/query-basics) and the [offline data store](/docs/query-offline).
 one our [API clients](/docs/query-basics),
 while the offline data store queried by
 our [bulk API](/docs/query-offline).
