--- a/underscore.mdx
+++ b/underscore.mdx
@@ -279,7 +279,10 @@ combination with underscore references to transform features:
 
 * [`array_agg`](/api-docs#array_agg)
 * [`array_count_value`](/api-docs#array_count_value)
+* [`array_distinct`](/api-docs#array_distinct)
 * [`array_join`](/api-docs#array_join)
+* [`array_max`](/api-docs#array_max)
+* [`array_min`](/api-docs#array_min)
 * [`array_sort`](/api-docs#array_sort)
 * [`cardinality`](/api-docs#cardinality)
 * [`head`](/api-docs#head)
