Fix syntax highlighting

--- a/configuration.mdx
+++ b/configuration.mdx
@@ -127,7 +127,7 @@ features and resolvers.
 
 Here is a sample `chalk.yaml` file. In this file, we use a different Dockerfile in production.
 
-```
+```yaml
 project: my-project-id
 
 environments:
