--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -21,7 +21,7 @@ failed logins in the last 10 minutes, 30 minutes, and 1 day:
 
 ```py
 from chalk import Windowed, windowed
-from chalk.features import DataFrame
+from chalk.features import DataFrame, _
 
 @features
 class LoginAttempt:
