--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -27,7 +27,7 @@ class LoginAttempt:
     id: int
     user: "User.id"
     status: str
-    ts: datetime
+    ts: dt.datetime
 
 @features
 class User:
