--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -48,8 +48,8 @@ Windowed features support much of the same functionality as normal features. The
 [`etl_offline_to_online`](/api-docs#windowed.etl_offline_to_online).
 
 Windowed features are typically resolved, either:
-- inline by expressions,
-- by stream resolvers, or
+- inline by [expressions](/docs/underscore),
+- by [stream resolvers](/docs/streams), or
 - by materialized aggregates.
 
 ### Querying by windowed time range
